# agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  start-lr-windows.cmd  start-lr-windows.ps1  start-lr.command  开发指导.md
agents/: AGENTS.md
agents/carbon-agent/: AGENTS.md  config.yaml
agents/compressor-agent/: AGENTS.md  config.yaml
agents/ems-agent/: AGENTS.md  config.yaml
agents/main-agent/: AGENTS.md  config.yaml
agents/optimizer-agent/: AGENTS.md  config.yaml
agents/power-agent/: AGENTS.md  config.yaml
apps/: README.md
apps/api/: Dockerfile  alembic.ini
apps/arthra-gateway/: README.md
apps/arthra-orchestrator/: README.md
apps/arthra-scheduler/: README.md
apps/web/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dataset/: README.md
deployments/: README.md
deployments/docker/: qdrant.yml
docs/: README.md
docs/agents/: codex-prompts.md  plugin-contract.md
docs/architecture/: adr-0001-gradual-agent-migration.md  rag-knowledge-boundary.md  (+2 more)
knowledge/: README.md
mcp-servers/: README.md
services/: README.md
tests/: README.md  test_agent.py  test_agent_evaluation.py  test_agent_tools.py  test_architecture_migration.py  test_compressor_context.py  test_compressor_tools.py  test_contracts.py  test_control.py  test_daily_insight.py  test_daily_summary.py  test_demand_forecast.py  test_industrial_data.py  test_knowledge.py  test_observability.py  test_power_analysis.py  test_profiles.py  test_question_answering.py  test_security.py  test_tenancy.py
(+99 files in other folders)
