[project]
name = "arthra"
version = "0.1.0"
description = "Arthra AI energy and carbon brain"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "langchain==1.3.13",
  "langchain-openai>=0.3,<1",
  "langgraph==1.2.9",
  "langgraph-checkpoint-postgres>=2.0,<4",
  "paho-mqtt>=2.1,<3",
  "pgvector>=0.4,<1",
  "pymilvus>=2.5,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [
  "apps/api",
  "apps/arthra-gateway/src",
  "apps/arthra-orchestrator/src",
  "apps/arthra-scheduler/src",
  "agents/main-agent/src",
  "agents/power-agent/src",
  "agents/compressor-agent/src",
  "packages/core/src",
  "packages/rag/src",
  "packages/memory/src",
  "packages/tools/src",
  "packages/mcp-client/src",
  "packages/evaluation/src",
  "packages/observability/src",
  "mcp-servers/energy-data/src",
  "services/simulator",
]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
